<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_primary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            app:tint="@color/label_primary"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back" />


        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:textSize="14sp"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_back" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            android:minHeight="108dp"
            app:cardBackgroundColor="@color/back_secondary"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="108dp"
                android:backgroundTint="@color/back_secondary"
                android:gravity="top"
                android:hint="@string/msg_hint"
                android:padding="16dp"
                android:textColorHint="@color/label_tertiary"
                android:textColor="@color/label_primary"
                android:textAppearance="@style/Text"/>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_priority_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/priority_title"
            android:textAppearance="@style/Text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:paddingTop="5dp"
            android:paddingBottom="20dp"
            android:text="@string/low_priority"
            android:textAppearance="@style/SubTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_priority_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority_title" />


        <ImageView
            android:id="@+id/iv_divider1"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_priority"
            app:tint="@color/support_separator"
            tools:ignore="ContentDescription" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_deadline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:text="@string/deadline_title"
            android:textAppearance="@style/Text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_divider1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:visibility="invisible"
            android:paddingTop="5dp"
            android:textAppearance="@style/DateSubTitle"
            app:layout_constraintStart_toStartOf="@+id/tv_deadline_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_deadline_title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_deadline"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:checked="false"
            android:theme="@style/Switcher"
            app:layout_constraintBottom_toTopOf="@+id/tv_deadline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_deadline_title"
            app:useMaterialThemeColors="false" />


        <ImageView
            android:id="@+id/iv_divider2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_deadline"
            app:tint="@color/support_separator"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:id="@+id/llDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_divider2">

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_delete"
                app:tint="@color/red"
                android:contentDescription="@string/delete" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:layout_marginStart="20dp"
                android:textAppearance="@style/DeleteTitle"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
