<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:background="@color/back_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:backgroundTint="@color/back_primary">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/back_primary"
                app:expandedTitleGravity="bottom"
                app:title="Мои дела"
                app:expandedTitleTextColor="#00FFFFFF"
                app:collapsedTitleTextAppearance="@style/AppBarTitle"
                app:titleCollapseMode="fade"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/my_todo"
                    android:textAppearance="@style/LargeTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/todo_done"
                    android:visibility="gone"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/label_tertiary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="parallax">
                    <ImageButton
                        android:id="@+id/btn_settings"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        app:tint="@color/label_primary"
                        android:src="@drawable/baseline_settings_24"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:layout_gravity="end"/>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@color/back_primary">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/back_secondary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <com.tsuryo.swipeablerv.SwipeableRecyclerView
                            android:id="@+id/rv_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            app:leftBgColor="@color/green"
                            app:leftImage="@drawable/ic_check"
                            app:rightBgColor="@color/red"
                            app:rightImage="@drawable/ic_delete"
                            tools:itemCount="2"
                            tools:listitem="@layout/item_todo"/>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/card_add_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardCornerRadius="0dp">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_msg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="52dp"
                                android:paddingVertical="15dp"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/roboto_regular"
                                android:maxLines="3"
                                android:text="@string/add_new_todo"
                                android:textColor="@color/label_primary"
                                android:textSize="16sp"
                                app:layout_constraintTop_toTopOf="parent"/>

                        </com.google.android.material.card.MaterialCardView>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_todo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            app:backgroundTint="@color/blue"
            app:elevation="6dp"
            app:tint="@color/white"
            android:scaleType="center"
            android:src="@drawable/ic_add"
            android:layout_gravity="bottom|end"
            app:maxImageSize="14dp"
            android:contentDescription="@string/add_new_todo_description" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>